# pasithea

./: .gitignore  Cargo.toml  README.md
src/: help.rs  main.rs  spech_recognition.rs  trash.rs
src/audio_host/: audio_settings.rs  audio_stream.rs  mod.rs
src/spech_recognition/: audio.rs  mod.rs  recognition.rs
