[package]
name = "pasithea"
version = "0.0.1"
authors = ["FreeOn <zoxo@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coqui-stt = "0.2.2"
audrey = "0.3.0"
dasp_signal = "0.11"
dasp_interpolate = { version = "0.11", features = ["linear"] }
cpal = "0.13.5"
anyhow = "1.0.56"
nnnoiseless = "0.4.0"
clap = { version = "3.1.6", features = ["derive"] }